--- a/IRO.InfinityPhoto/IRO.InfinityPhoto.csproj
+++ b/IRO.InfinityPhoto/IRO.InfinityPhoto.csproj
@@ -68,8 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Application.cs" />
-    <Compile Include="BetaChecks.cs" />
-    <Compile Include="Module.cs" />
+    <Compile Include="RegistryHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
